@@ -2,7 +2,7 @@
  * Internal functions for file input/output.
  *
  * Written by Russ Allbery <eagle@eyrie.org>
- * Copyright 2012, 2013
+ * Copyright 2012, 2013, 2014
  *     The Board of Trustees of the Leland Stanford Junior University
  *
  * See LICENSE for licensing terms.
@@ -17,12 +17,83 @@
 
 
 /*
+ * Lock a file by name.  Returns a WebAuth error code, and stores the object
+ * representing the file lock in the third argument.  That result should be
+ * passed to wai_file_unlock to unlock the file.
+ *
+ * This function creates and locks a separate lock file formed by adding
+ * ".lock" to the end of the provided file name.  This allows atomic replace
+ * of the file being locked without releasing the lock, which eliminates some
+ * race conditions.  It requires the locking process have write access to the
+ * directory containing the file.
+ */
+int
+wai_file_lock(struct webauth_context *ctx, const char *path,
+              apr_file_t **lock)
+{
+    char *name;
+    apr_file_t *file = NULL;
+    apr_status_t code;
+    apr_int32_t flags;
+    apr_fileperms_t perms;
+
+    /* Set the output parameter in case of error. */
+    *lock = NULL;
+
+    /*
+     * Open the lock file.  First, try to open it assuming it exists.  If this
+     * fails because the file doesn't exist, try again with exclusive create.
+     */
+    name = apr_psprintf(ctx->pool, "%s.lock", path);
+    flags = APR_FOPEN_WRITE;
+    perms = APR_FPROT_UREAD | APR_FPROT_UWRITE;
+    code = apr_file_open(&file, name, flags, perms, ctx->pool);
+    if (code != APR_SUCCESS && APR_STATUS_IS_ENOENT(code)) {
+        flags |= APR_FOPEN_CREATE | APR_FOPEN_EXCL;
+        code = apr_file_open(&file, name, flags, perms, ctx->pool);
+    }
+    if (code != APR_SUCCESS)
+        return wai_error_set_apr(ctx, WA_ERR_FILE_OPENWRITE, code, "%s", name);
+
+    /* Lock the file exclusively. */
+    code = apr_file_lock(file, APR_FLOCK_EXCLUSIVE);
+    if (code != APR_SUCCESS) {
+        apr_file_close(file);
+        return wai_error_set_apr(ctx, WA_ERR_FILE_LOCK, code, "%s", name);
+    }
+
+    /* Success.  Return the results. */
+    *lock = file;
+    return WA_ERR_NONE;
+}
+
+
+/*
+ * Unlock a file.  Takes the path of the file to unlock for error reporting,
+ * and the apr_file_t returned by wai_file_lock.
+ */
+int
+wai_file_unlock(struct webauth_context *ctx, const char *path,
+                apr_file_t *lock)
+{
+    int s;
+    apr_status_t code;
+
+    code = apr_file_unlock(lock);
+    if (code != APR_SUCCESS) {
+        s = WA_ERR_FILE_LOCK;
+        return wai_error_set_apr(ctx, s, code, "unlock %s.lock", path);
+    }
+    apr_file_close(lock);
+    return WA_ERR_NONE;
+}
+
+
+/*
  * Read in the entirety of a file, continuing after partial reads or signal
  * interruptions.  Takes the WebAuth context, the file name, and pointers into
  * which to store the newly allocated buffer and length.  Returns a WebAuth
  * error code.
- *
- * FIXME: Currently does no locking.
  */
 int
 wai_file_read(struct webauth_context *ctx, const char *path,
@@ -93,7 +164,7 @@ done:
  * interruptions.  Takes the WebAuth context, the data, and the file name.
  * Returns a WebAuth error code.
  *
- * FIXME: Currently does no locking and does not preserve permissions.
+ * FIXME: Does not preserve permissions.
  */
 int
 wai_file_write(struct webauth_context *ctx, const void *data, size_t length,
