@@ -3,7 +3,7 @@
 # Miscellaneous token tests
 #
 # Written by Jon Robertson <jonrober@stanford.edu>
-# Copyright 2010, 2012, 2013
+# Copyright 2010, 2012, 2013, 2014
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # See LICENSE for licensing terms.
@@ -85,6 +85,6 @@ SKIP: {
     ok ($token, 'add_remuser_token works');
 }
 
-unlink ($WebKDC::Config::KEYRING_PATH);
+unlink ($WebKDC::Config::KEYRING_PATH, "$WebKDC::Config::KEYRING_PATH.lock");
 unlink ('krb5cc_test');
 rmtree ('./t/tmp');
